# sahara

./: .coveragerc  .gitignore  .gitreview  .mailmap  .pylintrc  .stestr.conf  .testr.conf  .zuul.yaml  AUTHORS  CONTRIBUTING.rst  HACKING.rst  MANIFEST.in  README.rst  bandit.yaml  bindep.txt  lower-constraints.txt  openstack-common.conf  requirements.txt  run_tests.sh  setup.cfg  setup.py  test-requirements-bandit.txt  test-requirements.txt  tox.ini
api-ref/source/: cluster-templates.inc  clusters.inc  conf.py  data-sources.inc  event-log.inc  image-registry.inc  index.rst  job-binaries.inc  job-binary-internals.inc  job-executions.inc  job-types.inc  jobs.inc  node-group-templates.inc  parameters.yaml  plugins.inc
devstack/: README.rst  exercise.sh  plugin.sh  settings
devstack/files/: apache-sahara-api.template
devstack/upgrade/: cluster-create.json  cluster-template.json  ng-master.json  ng-template.json  ng-worker.json  resources.sh  settings  shutdown.sh  upgrade.sh
doc/: requirements.txt
doc/source/: architecture.rst  conf.py  config-generator.conf  how-to-participate.rst  index.rst  introduction.rst.inc  overview.rst  quickstart.rst  restapi.rst  roadmap.rst
doc/test/: redirect-tests.txt
eho/: config.py  main.py
eho/api/: v02.py
eho/common/: common.py  setup_utils.py  test_lib.py
eho/middleware/: auth_valid.py
eho/server/: main.py  scheduler.py
eho/service/: api.py  cluster_ops.py
eho/storage/: defaults.py  models.py
eho/utils/: api.py  scheduler.py
etc/: default.cfg  eho-api.cfg  local.cfg-sample
etc/edp-examples/: README.rst
etc/eho/: eho.conf  eho.conf.sample  eho.conf.sample-full  savanna.conf.sample-full
etc/rest-api-samples/: cluster_create_full.json  cluster_create_minimal.json  cluster_tmpl_create.json  node_group_tmpl_create.json  scale_cluster.json
etc/sahara/: README-sahara.conf.txt  api-paste.ini  compute.topology.sample  policy.json  rootwrap.conf  sahara.conf.sample  sahara.conf.sample-basic  swift.topology.sample
etc/savanna/: savanna.conf.sample  savanna.conf.sample-basic  savanna.conf.sample-full
etc/scenario/: simple-testcase.yaml
etc/sudoers.d/: sahara-rootwrap
playbooks/buildimages/: run.yaml
playbooks/sahara-grenade/: run.yaml
releasenotes/notes/: add-impala-2.2-c1649599649aff5c.yaml  add-mapr-520-3ed6cd0ae9688e17.yaml  add-mapr-kafka-3a808bbc1aa21055.yaml  add-mapr-sentry-6012c08b55d679de.yaml  add-scheduler-edp-job-9eda17dd174e53fa.yaml  add-storm-version-1_1_0-3e10b34824706a62.yaml  add-upgrade-check-framework-9cd18dbc47b0efbd.yaml  add-wsgi-server-support-c8fbc3d76d4e42f6.yaml  add_kafka_in_cdh-774c7c051480c892.yaml  add_mapr_repo_configs-04af1a67350bfd24.yaml  ambari-agent-pkg-install-timeout-param-d50e5c15e06fa51e.yaml  ambari-downscaling-b9ba759ce9c7325e.yaml  ambari-hive-92b911e0a759ee88.yaml  ambari-server-start-856403bc280dfba3.yaml  ambari26-image-pack-88c9aad59bf635b2.yaml  ambari_2_4_image_generation_validation-47eabb9fa90384c8.yaml  api-insecure-cbd4fd5da71b29a3.yaml  api-v2-return-payload-a84a609db410228a.yaml  apiv2-microversion-4c1a58ee8090e5a9.yaml  apiv2-payload-tweaks-b73c20a35263d958.yaml  apiv2-preview-release-b1ee8cc9b2fb01da.yaml  apiv2-stable-release-25ba9920c8e4632a.yaml  asg-fix-6243442b85931c40.yaml  auto_configs_for_hdp-011d460d37dcdf02.yaml  boot-from-volume-e7078452fac1a4a0.yaml  ca-cert-fix-5c434a82f9347039.yaml  cdh-5-5-35e582e149a05632.yaml  cdh-513-bdce0d5d269d8f20.yaml  cdh-labels-5695d95bce226051.yaml  cdh_5_11_0_image_generation_validation-6334ef6d04950935.yaml  cdh_5_11_support-10d4abb91bc4475f.yaml  cdh_5_7_image_generation_validation-308e7529a9018663.yaml  cdh_5_7_support-9522cb9b4dce2378.yaml  cdh_5_9_0_image_generation_validation-19d10e6468e30b4f.yaml  cdh_5_9_support-b603a2648b2e7b32.yaml  cluster-is-protected-eee9e2bd2595fdc8.yaml  config-groups-ambari-837de6d33eb0fa87.yaml  configure-spark-hive-hbase-60dd82c05449bc03.yaml  consolidate-cluster-creation-apiv2-5d5aceeb2e97c702.yaml  convert-to-cluster-template-43d502496d18625e.yaml  (+103 more)
releasenotes/source/: conf.py  index.rst  rocky.rst
resources/: setup-general.sh.template  setup-master.sh.template
roles/build-sahara-images-cli/: README.rst
sahara/: config.py  context.py  exceptions.py  i18n.py  main.py  version.py
sahara/api/: acl.py  base.py  microversion.py  v10.py  v11.py
sahara/cli/: sahara_all.py  sahara_api.py  sahara_engine.py  sahara_rootwrap.py  sahara_status.py  sahara_subprocess.py  savanna_api.py
sahara/common/: config.py
sahara/conductor/: __init__.py  api.py  manager.py  objects.py  resource.py
sahara/db/: __init__.py  api.py  base.py
sahara/locale/: README  sahara-log-critical.pot  sahara-log-error.pot  sahara-log-info.pot  sahara-log-warning.pot  sahara.pot
sahara/middleware/: auth_valid.py
sahara/openstack/: commons.py
sahara/plugins/: base.py  castellan_utils.py  conductor.py  context.py  db.py  edp.py  exceptions.py  health_check_base.py  images.py  kerberos.py  labels.py  main.py  objects.py  opts.py  provisioning.py  recommendations_utils.py  resource.py  service_api.py  swift_helper.py  swift_utils.py  testutils.py  topology_helper.py  utils.py
sahara/resources/: instance.heat  main.heat  neutron-port.heat  nova-floating.heat  security_group.heat  userdata.rabbitmq.template  volume.heat
sahara/service/: api.py  coordinator.py  direct_engine.py  engine.py  heat_engine.py  networks.py  ntp_service.py  ops.py  periodic.py  quotas.py  sessions.py  shares.py  trusts.py  validation.py  volumes.py
sahara/swift/: swift_helper.py  utils.py
sahara/tests/: README.rst  __init__.py
sahara/topology/: topology_helper.py
sahara/utils/: agent_remote.py  api.py  api_validator.py  cluster.py  (+21 more)
savanna/: cli.py  config.py  context.py  exceptions.py  main.py  version.py
tools/: build_docs  cover.sh  get_auth_token  get_auth_token.py  hacking.py  install_venv  install_venv.py  install_venv_common.py  lintstack.py  pep8  pip-requires  pretty_tox.sh  run_coverage  run_fast_checks  run_itests  run_pep8  run_pyflakes  run_pylint  run_tests  run_tests.py  test-requires  with_venv
(+2593 files in other folders)
