[metadata]
name = savanna
version = 2014.1
summary = Savanna project
description-file = README.rst
license = Apache Software License
classifiers =
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
author = OpenStack
author-email = openstack-dev@lists.openstack.org
home-page = https://savanna.readthedocs.org

[global]
setup-hooks = pbr.hooks.setup_hook

[files]
packages =
    savanna

data_files =
    share/savanna = etc/savanna/*

[entry_points]
console_scripts =
    savanna-api = savanna.cli.savanna_api:main
    savanna-db-manage = savanna.db.migration.cli:main
    _savanna-subprocess = savanna.cli.savanna_subprocess:main

savanna.cluster.plugins =
    vanilla = savanna.plugins.vanilla.plugin:VanillaProvider
    hdp = savanna.plugins.hdp.ambariplugin:AmbariPlugin
    idh = savanna.plugins.intel.plugin:IDHProvider

savanna.infrastructure.engine =
    savanna = savanna.service.direct_engine:DirectEngine
    heat = savanna.service.heat_engine:HeatEngine

savanna.remote =
    ssh = savanna.utils.ssh_remote:SshRemoteDriver
    agent = savanna.utils.agent_remote:AgentRemoteDriver

[build_sphinx]
all_files = 1
build-dir = doc/build
source-dir = doc/source

[extract_messages]
keywords = _ gettext ngettext l_ lazy_gettext
mapping_file = babel.cfg
output_file = savanna/locale/savanna.pot

[compile_catalog]
directory = savanna/locale
domain = savanna

[update_catalog]
domain = savanna
output_dir = savanna/locale
input_file = savanna/locale/savanna.pot
